--- a/educational/templates/education/educational.html
+++ b/educational/templates/education/educational.html
@@ -55,7 +55,7 @@
                                                             transform="translate(0 -4.5)" fill="#444" />
                                                     </svg>
                                                     <div>
-                                                        <input autocomplete="off" name="name" type="text" value="교육명" class="groupName" tabindex="-1" disabled>
+                                                        <input autocomplete="off" name="name" type="text" value="기본교육" class="groupName" tabindex="-1" disabled>
                                                     </div>
                                                 </div>
                                             </td>
@@ -66,28 +66,28 @@
                                     <tbody class="documentContentsTableTbody">
                                         <tr>
                                             <td>1</td>
-                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">교육 제목1</a></td>
+                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">기사규정</a></td>
                                             <td>관리자</td>
                                             <td>2022.09.15</td>
                                         </tr>
 
                                         <tr>
                                             <td>2</td>
-                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">교육 제목1</a></td>
+                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">입사 시 등록 서류</a></td>
                                             <td>관리자</td>
                                             <td>2022.09.15</td>
                                         </tr>
 
                                         <tr>
                                             <td>3</td>
-                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">교육 제목1</a></td>
+                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">친절 교육</a></td>
                                             <td>관리자</td>
                                             <td>2022.09.15</td>
                                         </tr>
 
                                         <tr>
                                             <td>4</td>
-                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">교육 제목1</a></td>
+                                            <td colspan="2"><a href="#" class="show-details" data-target="#educationDetail1">현장관리자 수칙</a></td>
                                             <td>관리자</td>
                                             <td>2022.09.15</td>
                                         </tr>
@@ -225,18 +225,183 @@
             </div>
         </form>
     </div>
-    <div class="educationDetailBody">
+    <div class="educationDetailBody">   
         <div class="education-detailLabel">내용</div>
-        <div class="educationDetailImg">
-            <img src="#" class="educationImg">
-            <img src="#" class="educationImg">
-            <img src="#" class="educationImg">
-            <img src="#" class="educationImg">
-            <img src="#" class="educationImg">
-            <img src="#" class="educationImg">
-            <img src="#" class="educationImg">
-            <img src="#" class="educationImg">
-        </div>
+            <div class="driverRegulation"> <!--기사 규정-->
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 1.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 2.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 3.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 4.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 5.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 6.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 7.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 8.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 9.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/기사규정/기사규정 - 10.png' %}" class="educationImg1">
+                </div>
+            </div>
+        
+            <div class="employmentRegistrationDocuments">
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 1.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 2.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 3.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 4.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 5.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 6.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 7.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 8.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 9.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 10.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 11.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 12.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 13.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 14.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 15.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 16.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 17.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 18.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 19.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 20.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 21.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 22.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 23.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 24.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 25.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 26.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 27.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 28.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 29.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 30.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 31.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 32.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 33.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 34.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 35.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 36.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 37.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/입사 시 등록 서류/입사 시 구비 서류 - 38.png' %}" class="educationImg1">
+                </div>
+            </div>
+
+            <div class="kindService">
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/친절 교육/친절교육 - 1.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/친절 교육/친절교육 - 2.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/친절 교육/친절교육 - 3.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/친절 교육/친절교육 - 4.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/친절 교육/친절교육 - 5.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/친절 교육/친절교육 - 6.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/친절 교육/친절교육 - 7.png' %}" class="educationImg1">
+                </div>
+            </div>
+
+            <div class="managerRules">
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 1.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 2.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 3.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 4.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 5.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 6.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 7.png' %}" class="educationImg1">
+                    <div class="blank"></div>
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 8.png' %}" class="educationImg1">
+                </div>
+                <div class="educationDetailImgRow">
+                    <img src="{% static 'images/educational/기본교육/현장관리자 수칙/현장관리자 수칙 - 9.png' %}" class="educationImg1">
+
+                </div>
+            </div>
+            
+    </div>
         <div class="backToTable">
         <button id="backToTable">뒤로 가기</button>
         </div>
