--- a/dispatch/templates/dispatch/estimate_print.html
+++ b/dispatch/templates/dispatch/estimate_print.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'css/dispatch/estimatePrint.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/dispatch/contractPrint.css' %}" type="text/css" />
     <title>Document</title>
   </head>
   <body>
@@ -240,5 +241,202 @@
         <div class="sunghwa">[주]성화투어</div>
       </div>
     </div>
+    <div class="page2">
+      <h1 class="center title">계 약 서</h1>
+      <p class="margin08">
+          본 계약서는 전세버스를 이용하는 고객과 제공자 간의 계약 사항을 명확히 규정하기 위하여 작성되었으며, 갑 (이용자)과 을 (전세버스 제공자)는 아래와 같이 계약을 체결한다.
+      </p>
+      
+      <table class="table2">
+          <tr>
+              <td rowspan="5" class="center">갑</td>
+              <td class="center">등 록 번 호</td>
+              <td>135-81-63601</td>
+              <td rowspan="5" class="center">을</td>
+              <td class="center">등 록 번 호</td>
+              <td colspan="3">135-81-63601</td>
+          </tr>
+          <tr>
+              <td colspan="2"></td> 
+              <td class="center">상 표</td>
+              <td colspan="3">수원시 권선구 매송고색로 804번길 224-46(고색동)</td>
+          </tr>
+          <tr>
+              <td class="center">이 름</td>
+              <td>남소정</td>
+              <td class="center">상 호</td>
+              <td>오랜친구같은여행사</td>
+              <td class="center">담 당 자</td>
+              <td>이세명</td>
+          </tr>
+          <tr>
+              <td class="center">전 화 번 호</td>
+              <td>000-0000-0000</td>
+              <td class="center">업 체</td>
+              <td>오랜친구같은여행사</td>
+              <td class="center">종 목</td>
+              <td>국내외여행업</td>
+          </tr>
+          <tr>
+              <td class="center">계 좌 번 호</td>
+              <td>000-00000-00000</td>
+              <td class="center">전 화 번 호</td>
+              <td>1522-9821</td>
+              <td class="center">F A X</td>
+              <td>031-295-7151</td>
+          </tr>
+      </table>
+
+      <h2 class="sub-title">제2조 계약 목적</h2>
+      <p class="margin08">
+          본 계약은 전세버스 서비스 제공에 관한 제반 사항을 규정함을 목적으로 한다. 을은 갑이 요청한 일정 및 경로에 따라 버스 대절 서비스를 제공하며, 갑은 이에 대한 대금을 지급한다.
+      </p>
+
+      <table class="table2">
+          <tr>
+              <td rowspan="5" class="center">운<br>행<br>일<br>정</td>
+              <td class="center">출 발 일</td>
+              <td>2024-10-24</td>
+              <td rowspan="5" class="center">차<br>량</td>
+              <td class="center">구 분</td>
+              <td colspan="3">일반</td>
+          </tr>
+          <tr>
+              <td class="center">도 착 일</td>
+              <td>2024-10-24</td>
+              <td class="center">차 량 번 호</td>
+              <td colspan="3">12가 1325</td>
+          </tr>
+          <tr>
+              <td class="center">출 발 지</td>
+              <td>병점역1번출구</td>
+              <td class="center">대 수</td>
+              <td>2</td>
+              <td class="center">인 승</td>
+              <td>47</td>
+          </tr>
+          <tr>
+              <td class="center">경 유 지</td>
+              <td>
+                <div>
+                  test aaa bbb ㅅㅅㅅ
+                </div>
+              </td>
+              <td class="center">대당 대절 요금</td>
+              <td>1,000,000</td>
+              <td class="center">1인당 회비</td>
+              <td>약 </td>
+          </tr>
+          <tr>
+              <td class="center">도 착 지</td>
+              <td>제부도</td>
+              <td class="center">총 합</td>
+              <td colspan="3">2,000,000</td>
+              
+          </tr>
+      </table>
+
+      <h2 class="sub-title">제3조 서비스 내용</h2>
+      <ul class="ul">
+          <li>운행 정보 및 세부사항</li>
+          <ul class="ul">
+              <li>출발지에서 목적지까지의 구체적인 경로는 갑과 을이 사전 협의한 경로를 따른다. 특별한 상황에 따라 경로 변경이 있을 수 있으며, 경로 변경 시 상호 협의 후 결정한다.</li>
+              
+          </ul>
+      </ul>
+
+      <h2 class="sub-title">제4조 계약 금액 및 지급 방법</h2>
+      <ul class="ul">
+          <li>지급일 및 지급 방법</li>
+          <ul class="ul">
+              <li>갑은 을에게 운행일 3일 전까지 계약 금액을 을의 지정 계좌로 입금하여야 한다.</li>
+              <li>을의 계좌번호: [IBK기업] 331-011771-01-011</li>
+              <li>예금주: 김형주</li>
+          </ul>
+      </ul>
+
+      <table class="payment-table">
+          <tr>
+              <td rowspan="3" class="col-small-small center">예<br>약<br>금</td>
+              <td class="col-small center">지 불 액</td>
+              <td class="col-medium">140,000</td>
+              <td rowspan="3" class="col-small-small center">중<br>도<br>금</td>
+              <td class="col-small center">지 불 액</td>
+              <td class="price col-medium"></td>
+          </tr>
+          <tr>
+              <td class="col-small center">잔 금</td>
+              <td class="col-medium">140,000</td>
+              <td class="col-small center">잔 금</td>
+              <td class="price col-medium"></td>
+          </tr>
+          <tr>
+              <td class="col-small center">적 요</td>
+              <td class="col-medium"></td>
+              <td class="col-small center">적 요</td>
+              <td class="col-medium"></td>
+          </tr>
+      </table>
+    </div>
+    <div class="page2">
+      <h2>제5조 계약의 변경 및 취소</h2>
+      <ul class="ul">
+          <li>갑 또는 을은 계약 변경 사항이 있을 시 상대방과 협의하여 계약 내용을 변경할 수 있다.</li>
+          <li>운행일 기준 7일 전까지 취소할 경우 전액 환불, 운행일 기준 3일 전까지 취소할 경우 50% 환불, 운행일 기준 2일 이내 취소 시 환불이 불가하다.</li>
+      </ul>
+
+      <h2>제6조 을의 의무</h2>
+      <ul class="ul">
+          <li>을은 계약된 일정과 경로에 따라 전세버스 운행 서비스를 제공해야 하며, 차량 상태 및 안전 점검을 완료한 후 운행을 시작해야 한다.</li>
+          <li>을은 운전기사를 포함한 서비스 제공자의 법적, 안전적 책임을 성실히 이행해야 한다.</li>
+      </ul>
+
+      <h2>제7조 갑의 의무</h2>
+      <ul class="ul">
+          <li>갑은 운행 중 차량 및 운전기사의 안전에 유의해야 하며, 차량 내에서의 질서 유지에 협조해야 한다.</li>
+          <li>갑이 임의로 계약 내용을 변경하거나 을의 지시를 따르지 않을 경우, 갑에게 발생한 손해에 대한 책임은 갑에게 있다.</li>
+      </ul>
+
+      <h2>제8조 계약 해지</h2>
+      <ul class="ul">
+          <li>다음의 경우 갑 또는 을은 서면 통지 후 계약을 해지할 수 있다.</li>
+          <ul class="ul">
+              <li>갑 또는 을이 계약 조건을 위반하거나 이행하지 않는 경우</li>
+              <li>천재지변 등 불가항력적인 사유로 인하여 운행이 불가능할 경우</li>
+          </ul>
+      </ul>
+
+      <h2>제9조 손해배상</h2>
+      <ul class="ul">
+          <li>을의 귀책사유로 인해 운행이 지연되거나 취소된 경우, 을은 갑에게 전액 환불 또는 손해를 배상해야 한다.</li>
+          <li>갑의 귀책사유로 인해 운행이 지연되거나 취소된 경우, 을은 이에 대해 손해배상 청구를 할 수 있다.</li>
+      </ul>
+
+      <h2>제10조 기타사항</h2>
+      <ul class="ul">
+          <li>본 계약서에 명시되지 않은 사항은 상호 협의하여 결정하며, 협의가 이루어지지 않을 경우 대한민국 관련 법령에 따른다.</li>
+          <li>갑과 을은 상호 신의성실의 원칙에 따라 본 계약을 성실히 이행하여야 한다.</li>
+      </ul>
+
+      <h2>제11조 관할 법원</h2>
+      <ul class="ul">
+          <li>본 계약과 관련하여 발생하는 분쟁에 대해서는 [갑의 주소지] 관할 법원에서 심리, 판결한다.</li>
+          <li>본 계약은 갑과 을이 서명함으로써 효력이 발생하며, 계약 당사자는 본 계약의 내용에 대하여 성실히 이행할 것을 확인한다.</li>
+      </ul>
+      <br>
+      <br>
+      <p class="margin08">위와 같은 조건으로 전세버스 운송약관에 의거 계약을 체결합니다.</p>
+      <br>
+      <p class="date margin08">2024년 9월 24일</p>
+
+      <div class="signature-section">
+          <div>갑:&nbsp;<span class="blue">[ 고객 서명 ]</span></div>
+          <div>을: [ 회사 서명 ]</div>
+      </div>
+      <br>
+      <p class="center margin08">이 계약서는 쌍방의 서명과 날인으로 효력이 발생하며, 갑과 을 각각 1부씩 보관합니다.</p>
+    </div>
   </body>
 </html>
+
+    
