일근무현황 프론트 변경"

--- a/salary/templates/salary/daily_status.html
+++ b/salary/templates/salary/daily_status.html
@@ -44,7 +44,7 @@
                 <div class="theadThTh th">차고지 도착(내부)</div>
                 <div class="theadThTh th">차고지 도착(외부)</div>
                 <div class="theadThTh th">사전 준비 시간</div>
-                <div class="theadThTh th">첫 줄발지 대기장소</div>
+                <div class="theadThTh th">대기장소</div>
                 <div class="theadThTh th">출발 시간</div>
                 <div class="theadThTh th">도착 시간</div>
                 <div class="theadThTh th">차량 입고(외부)</div>
@@ -83,11 +83,14 @@
                         <div class="tbodyDivTdTd tbodyDivTdTdInformation td">{{connect.route}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdInformation td">{{connect.work_type}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.0}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.1}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.2}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.3}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.4}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td">{{connect.connect_time_list.5}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td"></div>
 
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{connect.total_time}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
