--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -411,11 +411,6 @@
                     </div>
                 </div>
             </div>
-            {% if detail %}
-            {% for waypoint in waypoint_list %}
-            <input class="waypointHidden" name="waypoint" type="hidden" value="{{waypoint.waypoint}}">
-            {% endfor %}
-            {% endif %}
         </form>
         <form action="{% url 'dispatch:regularly_route' %}" class="routListSearch">
             <select name="use">
@@ -700,8 +695,8 @@
     const STATION_LIST_URL = '{% url "dispatch:regularly_station_list" %}'
     
     const STATION_TYPES = {
-        '출근' : ['차고지', '첫 정류장 대기장소', '정류장', '사업장', '대기장소'],
-        '퇴근' : ['대기장소', '사업장', '정류장', '마지막 정류장', '차고지'],
+        '출근' : ['차고지(내부)', '차고지(외부)', '사전준비시간', '첫 정류장 대기장소', '정류장', '사업장', '대기장소(내부)', '대기장소(외부)', '뒷 정리 완료'],
+        '퇴근' : ['대기장소(내부)', '대기장소(외부)', '사전준비시간', '사업장 대기장소', '사업장', '정류장', '마지막 정류장', '차고지(내부)', '차고지(외부)', '뒷 정리 완료'],
     }
     const groupCreateChangeForm = document.querySelector(".groupCreate")
     
