--- a/salary/templates/salary/daily_status.html
+++ b/salary/templates/salary/daily_status.html
@@ -55,13 +55,14 @@
                     <div class="theadThTitle personalFlex">근로내역</div>
                     <div class="theadThContent personalFlex">
                         <div class="theadThContents personalFlex">총 시간</div>
+                        <div class="theadThContents personalFlex">휴식 시간</div>
                         <div class="theadThContents personalFlex">야간근로</div>
                         <div class="theadThContents personalFlex">휴일(8시간 이하)</div>
                         <div class="theadThContents personalFlex theadThContentsLast">휴일(8시간 초과)</div>
                     </div>
                 </div>
             </div>
-            <div class="theadTh th">확인서명</div>
+            {% comment %} <div class="theadTh th">확인서명</div> {% endcomment %}
         </div>
 
         <div class="tbody">
@@ -96,20 +97,23 @@
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
                     </div>
                     {% endfor %}
 
                     <div class="tbodyDivTdTdSum personalFlex">
                         <div class="tbodyDivTdTd tbodyDivTdTdInformation td">소계</div>
                         <div class="tbodyDivTdTd none td">해당없음</div>
+                        
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.total_work_hour_minute}}</div>
+                        <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime"></div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.night_shift_time_list.0}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.holiday_hour_minute}}</div>
                         <div class="tbodyDivTdTd tbodyDivTdTdTimeValue td sumTime">{{data.additional_holiday_hour_minute}}</div>
                     </div>
 
                 </div>
-                <div class="tbodyDivTd tbodyInformationElement td">(서명)</div>
+                {% comment %} <div class="tbodyDivTd tbodyInformationElement td">(서명)</div> {% endcomment %}
 
             </div>
             {% endwith %}
