--- a/static/css/approval/approval_create.css
+++ b/static/css/approval/approval_create.css
@@ -24,3 +24,51 @@
 .typeSelect {
     width: 13rem;
 }
+
+.textareaInputCell {
+    align-items: baseline;
+    height: 100%;
+}
+
+.contentTextarea {
+    width: calc(100% - 13rem);
+    padding: 1rem;
+}
+
+.createHeader {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 15rem;
+}
+
+.createHeaderEdit {
+    height: 23rem;
+}
+
+.createdFileBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: calc(100% - 13rem);
+    height: 4rem;
+    padding: 1rem;
+    border: 0.1rem solid #D2D2D2;
+    border-radius: 0.3rem;
+    overflow-y: scroll;
+    margin-top: -3rem;
+}
+
+.inputCell input[type=file] {
+    height: 3rem;
+}
+
+.approvalFileDeleteBtn {
+    color: red;
+}
+
+.paddingLeft {
+    padding-left: 1rem;
+}
